[package]
name = "euui"
description = "An Extended Universal Unique Identifier"
categories = ["encoding", "data-structures", "no-std"]
keywords = ["EUUI", "key", "unique", "guid", "identifier"]
license = "MIT"
version = "1.2.1"
edition = "2021"
repository = "https://github.com/Trehinos/euui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["random", "uuid", "random_uuid"]
random = ["dep:rand"]
random_uuid = ["uuid", "uuid/v4"]
uuid = ["dep:uuid"]

[dependencies]
rand = { version = "0.9.*", optional = true }
uuid = { version = "1.*", optional = true }